[MAS-49312] Avoid deoptimization storm
Currently we use URL class to compute the string
this internally tries to load the handler ex, csid://abc/def
csid handler will not be found and c2 compiled codes are
deoptimized frequently. For 120s there are 50K events related
to this.
URI class have a resolve method which does not tries to load
or anything just computes the resolved location in
<!DOCTYPE ...> tag.